--- a/wep.html
+++ b/wep.html
@@ -6,29 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="wepp.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div>
         <h1>YANGIOBOD</h1>
         <h2>MAXALLA FUQOROLAR YIGINI</h2>
         <br>
-        <img src="/photo_2023-03-10_08-58-50.jpg" alt="">
+        <i class='bx bx-user bx-flip-horizontal bx-tada' style='color:#0e62d6;font-size: 50px;'  ></i>
         <br>
         <label for="">Ismi</label><br>
         <input type="text" placeholder="ismi">
         <br>
         <label class="b" for="">Familya</label><br>
         <input class="a" type="text" placeholder="familya">
-        <br>
+        <br><br>
+        <button>Ro'yxatan o'tish</button><br><br>
         <label for="">Login</label><br>
         <input type="text" placeholder="login">
         <br>
         <label for="">Parol</label><br>
         <input type="text" placeholder="parol">
         <br><br><br>
-        <button>Ro'yxatan o'tish</button>
-        <button>kirish</button>
+
+        <button class="za">kirish</button>
 
     </div>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
