--- a/yangiobod.html
+++ b/yangiobod.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="yangiobod1.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-        <div class="a">
-        <h1>Yangiobod Yangliklari</h1>
-        
-
-        </div>
+    <div class="a">
+        <div class="b"><i class='bx bxs-heart' style='color:#e42424;font-size: 100px;'   ></i></div>
+        <div class="d"><i class='bx bxs-like' style='color:#e42424;font-size: 100px;' ></i></div>
+        <div class="e"><i class='bx bx-star' style='color:#a38181;font-size: 100px;' ></i></div>
+    </div>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
